# servermonitor

./: .gitignore  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  LICENSE  Notification.cpp  Notification.h  README.md  ServerMonitor.cpp  ServerMonitor.h  ServerMonitor.kdev4  ThreadPing.cpp  ThreadPing.h  config-sample.json  main.cpp
qt4/: ServerMonitor.cpp  ServerMonitor.h  ThreadPing.cpp
qt5/: ServerMonitor.pro  configreader.cpp  configreader.h  main.cpp  notification.cpp  notification.h  servermonitor.cpp  servermonitor.h  threadping.cpp  threadping.h  ui_mainwindow.h
